src/components/status.css
/* ... */
.card p {
  margin: 0;
}
.card .meta-container {
  padding: 8px;
  min-width: 0;
  flex-grow: 1;
  align-self: center;
}
.status.large .card.large .meta-container,
.status-carousel
  .content-container[data-content-text-weight='1']
  .card.large
  .meta-container {
  align-self: flex-start;
  flex-grow: 0;
}
.card .title {
  line-height: 1.25;
  font-weight: normal;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  text-wrap: balance;
}
.card .meta {
  font-size: smaller;
  opacity: 0.75;
  margin: 0;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
}
.card.no-image :is(.title, .meta) {
  -webkit-line-clamp: 3;
  line-clamp: 3;
}
.card .meta.domain {
  opacity: 1;
  color: var(--text-insignificant-color);

  .domain {
    color: var(--link-color);
  }
}
.card:visited .meta .domain {
  color: var(--link-visited-color);
}
.card .meta .domain * {
  vertical-align: middle;
}
a.card {
  text-decoration: none;
  transition: opacity 0.2s ease-in-out;
}
a.card:is(:hover, :focus) {
  border: 1px solid var(--link-color);
  box-shadow: 0 0 0 2px var(--link-faded-color);
}
a.card:is(:hover, :focus):visited {
  border-color: var(--link-visited-color);
}
.card.video {
  max-width: 320px;
  max-height: 320px;
  cursor: pointer;

  lite\-youtube {
    pointer-events: none;
  }
}
.card.video iframe {
  width: 100%;
  height: 100%;
}

/* POLLS */

.poll {
  display: inline-block;
  transition: opacity 0.2s ease-in-out;
  margin-top: 8px;
  border-radius: 16px;
  border: 1px solid var(--outline-color);
  background-color: var(--bg-faded-color);
  background-image: linear-gradient(
    to bottom,
    var(--bg-color) 50%,
    var(--bg-faded-color)
  );
  overflow: hidden;
  box-shadow: inset 0 0 0 1px var(--bg-color);
  min-width: 50%;
}
.poll.loading {
  opacity: 0.5;
  pointer-events: none;
}
.poll.read-only {
  pointer-events: none;
}
.poll-options {
  display: flex;
  flex-direction: column;
  gap: 4px;
  padding: 4px;
}
.poll-option {
  padding: 4px 8px;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: center;
  position: relative;
}
.poll-option > * {
  z-index: 1;
}
.poll-option:after {
  content: '';
  position: absolute;
  inset: 0;
  border-radius: 4px;
  background-color: var(--link-faded-color);
  opacity: 0;
  pointer-events: none;
  transition: all 0.2s ease-in-out;
  z-index: 0;
}
.poll-option:first-child:after {
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}
.poll-option:hover:after {
  opacity: 1;
}
.poll-option.poll-result:after {
  width: var(--percentage);
  opacity: 1;
}
.poll-label {
  width: 100%;
  display: flex;
  gap: 8px;
  cursor: pointer;
  z-index: 1;
}
.poll-label input:is([type='radio'], [type='checkbox']) {
  flex-shrink: 0;
  margin: 3px;
  min-height: 0.9em;
}
.poll-option-votes {
  flex-shrink: 0;
  font-size: 90%;
  opacity: 0.75;
  line-height: 1;
}
.poll-option-leading .poll-option-votes {
  font-weight: bold;
  opacity: 1;
}
.poll-vote-button {
  margin: 8px 8px 0 12px;
  /* padding-inline: 24px; */
  min-width: 160px;
}
.poll-meta {
  color: var(--text-insignificant-color);
  margin: 8px 16px;
  font-size: 90%;
  user-select: none;
}
.poll-option-title {
  text-shadow: 0 1px var(--bg-color);
  line-height: 1.2;
}
.poll-option-title .icon {
  vertical-align: middle;
}

/* EXTRA META */

.status .extra-meta {
  padding-top: 8px;
  color: var(--text-insignificant-color);
  font-size: 90%;
}
.status .extra-meta * {
  vertical-align: middle;
}
.status .extra-meta a {
  color: inherit;
  text-decoration: none;
  vertical-align: baseline;
  text-decoration-thickness: 1px;
  text-underline-offset: 3px;
}
.status .extra-meta a:is(:hover, :focus) {
  text-decoration: underline;
}
.status .extra-meta .edited:is(:hover, :focus) {
  cursor: pointer;
  color: var(--text-color);
}
.status.large .extra-meta {
  padding-top: 0;
  margin-left: calc(-50px - 16px);
}

/* EMOJI REACTIONS */

.status.large .emoji-reactions {
  cursor: default;
  margin-left: calc(-50px - 16px);
}

/* ACTIONS */

.status .actions {
  display: flex;
  gap: 8px;
}
.status.large .actions {
  padding-top: 4px;
  padding-bottom: 16px;
  margin-left: calc(-50px - 16px);
  color: var(--text-insignificant-color);
  border-top: var(--hairline-width) solid var(--outline-color);
  margin-top: 8px;
}
.status.large .actions.disabled {
  pointer-events: none;
  opacity: 0.5;
}
.status .action.has-count {
  flex: 1;
}
.status .action > button {
  min-height: 40px;
  min-width: 40px;
  padding: 0 8px;
  font-variant-numeric: tabular-nums;
}
.status .action > button.plain {
  color: inherit;
  border: 1.5px solid transparent;
  backdrop-filter: none;
}
.status .action > button.plain:not(:disabled):is(:hover, :focus) {
  color: var(--link-color);
  background-color: var(--button-plain-bg-hover-color);
}
.status .action > button.plain.reblog-button:not(:disabled):is(:hover, :focus) {
  color: var(--reblog-color);
}
.status .action > button.plain.reblog-button.checked {
  color: var(--reblog-color);
  border-color: var(--reblog-color);
}
@keyframes reblogged {
  5% {
    transform: translate(-2px, -2px);
  }
  10% {
    transform: translate(2px, 2px);
  }
  15% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(30px, -30px);
    opacity: 0;
  }
}
.status .action > button.plain.reblog-button.checked .icon {
  animation: reblogged 1s ease-in-out;
}
.status .action > button.plain.favourite-button:is(:hover, :focus) {
  color: var(--favourite-color);
}
.status .action > button.plain.favourite-button.checked {
  color: var(--favourite-color);
  border-color: var(--favourite-color);
}
/* ... */

